--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,17 @@
-<router-outlet></router-outlet>
+<!-- <div class="grid grid-cols-12">
+  <nav class="col-span-1 p-3 flex items-center justify-between flex-col space-x-5">
+    <ul class="flex flex-col gap-2">
+        <li><a routerLink="/dashboard"><i class="fa-solid fa-house"></i></a></li>
+        <li><a routerLink=""><i class="fa-solid fa-house"></i></a></li>
+        <li><a routerLink=""><i class="fa-solid fa-house"></i></a></li>
+    </ul>
+
+  </nav>
+  <main class="col-span-11 p-6">
+    <router-outlet></router-outlet>
+  </main>
+</div>
+
+ -->
+
+<app-map-component></app-map-component>
