--- a/src/app/app.css
+++ b/src/app/app.css
@@ -2,7 +2,8 @@ nav {
     border-radius: 30px;
     margin: 1rem 1.5rem;
     background: #447496;
-    background: linear-gradient(173deg, rgba(68, 116, 150, 1) 0%, rgba(34, 148, 78, 0.23) 82%); 
+    background-color: white;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     position: sticky;
     height: 95vh;
     top: 0;
@@ -17,7 +18,6 @@ ul {
 
 li {
     text-align: center;
-    background-color: red;
     border-radius: 50%;
     width: 50px;
     height: 50px;
@@ -25,4 +25,24 @@ li {
     align-items: center;
     justify-content: center;
     cursor: pointer;
+}
+
+li:hover a {
+    color: var(--primary-Color);
+    transition: 0.5s ease-in-out;
+    transform: translateY(-2px);
+}
+
+li:hover {
+    border-color: var(--primary-Color);
+    border-width: 2px;
+}
+
+.actve-link {
+    background: linear-gradient(351deg, var(--primary-Color) 0%, var(--secondary-Color) 100%);
+    color: white;
+}
+
+a {
+    color: inherit;
 }
