--- a/src/app/Components/dashboard/dashboard.html
+++ b/src/app/Components/dashboard/dashboard.html
@@ -1,4 +1,7 @@
-<h1>لوحة التحكم</h1>
+<div class="my-container">
+    <h1>لوحة التحكم</h1>
+</div>
+
 <div class="my-container d-grid header-container">
     @if (Stats != null) {
         <div class="stat">
@@ -35,7 +38,6 @@
             </span>
         </div>
     }
-
 </div>
 
 <div class="my-container">
