feat: style the table

--- a/src/app/Components/dashboard-records/dashboard-records.html
+++ b/src/app/Components/dashboard-records/dashboard-records.html
@@ -1,21 +1,22 @@
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th scope="col">رقم الصورة</th>
-            <th scope="col">الحالة</th>
-            <th scope="col">تاريخ الرصد</th>
-            <th scope="col">التفاصيل</th>
-        </tr>
-    </thead>
-    <tbody>
-
-        @for (record of Records; track record.id) {
+<div class="my-container">
+    <table>
+        <thead>
             <tr>
-                <th scope="row">{{record.id}}</th>
+                <th scope="col">#</th>
+                <th scope="col">الحالة</th>
+                <th scope="col">تاريخ الرصد</th>
+                <th scope="col">التفاصيل</th>
+            </tr>
+        </thead>
+        <tbody>
+            @for (record of Records; track record.id; let i = $index) {
+            <tr [class.bg-row]="i % 2 == 0">
+                <th scope="row">{{i+1}}</th>
                 <td>{{record.status == "Unprocessed" ? "غير معالجة" : "معالجة"}}</td>
                 <td>{{record.detectedTime}}</td>
                 <td><a (click)="openDetails()"><i class="fa-solid fa-circle-info"></i></a></td>
             </tr>
-        }
-    </tbody>
-</table>
+            }
+        </tbody>
+    </table>
+</div>
